--- a/Clase_5/05_Eficiencia_de_Programa_Algoritmos_Recursivos_e_Introducción_a_Funciones.ipynb
+++ b/Clase_5/05_Eficiencia_de_Programa_Algoritmos_Recursivos_e_Introducción_a_Funciones.ipynb
@@ -80,6 +80,51 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#El tab es la identacion\n",
+        "def greatings(name):\n",
+        "  \"\"\" This function shows a message\n",
+        "\n",
+        "  parameters:\n",
+        "  ----------\n",
+        "\n",
+        "  - name: 'your name'\n",
+        "  \"\"\"\n",
+        "  print(\"gracias por usar este programa\")\n",
+        "  print(f'Bienvenido al curso {name}')\n"
+      ],
+      "metadata": {
+        "id": "HwDFUCcDHDu5"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greatings(name = \"Juan\")"
+      ],
+      "metadata": {
+        "id": "h-rSeGBvJbNR",
+        "outputId": "2c4035e4-69fc-4772-f575-ac4c3327f07f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gracias por usar este programa\n",
+            "Bienvenido al curso Juan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Ungfjy3J96ax"
@@ -90,6 +135,18 @@
         "    # Cuerpo de la función\n",
         "    return resultado\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np? #esto llama a la documentacion del archivo o libreria"
+      ],
+      "metadata": {
+        "id": "iyH8K3MCKEEO"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -116,12 +173,191 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def vector_norm(vector):\n",
+        "  \"\"\"\n",
+        "  Parameters:\n",
+        "  -----------\n",
+        "  vector: el vector tiene que estar en formato lista\n",
+        "  \"\"\"\n",
+        "  #v = (x1,x2, ..., xn)\n",
+        "  #||V|| = raiz cuadrada (x1 ^2, x2^2, ..., Xn^2)\n",
+        "  vector_2 = [x**2 for x in vector] #ese vector ya incluye toda la lista, es como llamar a una lista luego cuando ejecutemos\n",
+        "  return sum(vector_2)**0.5\n",
+        ""
+      ],
       "metadata": {
         "id": "t5Y0i3B7-dPZ"
       },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector = [4,5,2,1,0,10] # la resolucion del problema\n",
+        "vector_2 = [x**2 for x in vector]\n",
+        "sum(vector_2)**0.5"
+      ],
+      "metadata": {
+        "id": "F8k9PW3ILkYo",
+        "outputId": "406a80ee-3cf8-4032-9fde-5e0a344d4092",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12.083045973594572"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = vector_norm(vector = [4,5,2,1,0,10])\n",
+        "print(a*10)"
+      ],
+      "metadata": {
+        "id": "mSegeDvIMA8g",
+        "outputId": "ed2620db-8b2c-4786-a133-87a9d8b5f5a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120.83045973594572\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_pets(name,animal): #el interior son argumentos ()\n",
+        "  print(f'Tu tienes un/a {animal} llamada {name}')\n",
+        "\n",
+        "my_pets('Fido','Perro') #como programa asume lo que se le da ya esta en orden"
+      ],
+      "metadata": {
+        "id": "9cHMnIQeOH6t",
+        "outputId": "d494b061-a69f-4794-bf1f-5ed642606ac9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tu tienes un/a Perro llamada Fido\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "** Ejercicio 1**\n",
+        "\n",
+        "Escriba una funcion que tenga como input dos numeros (N y n). El resultado de la funcion debe ser la cantidad de multiplos de n menores que N.\n",
+        "\n",
+        "** Ejercicio 2**\n",
+        "\n",
+        "Sobre la funcion anterior, agregue un control para validar que N > n, de no ser asi imprimi un mensaje de que los numeros no son validos\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XM_GpVkSPaUb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def numero(N, n):\n",
+        "  \"\"\"\n",
+        "  Esta función calcula la cantidad de múltiplos de n menores que N y devuelve el conteo y la lista de múltiplos.\n",
+        "\n",
+        "  Parámetros:\n",
+        "  N: Numero mas grande que se quiere evaluar.\n",
+        "  n: número del cual se buscan los múltiplos.\n",
+        "\n",
+        "  Retorna:\n",
+        "  Una lista que contiene el conteo de múltiplos y la lista de múltiplos.\n",
+        "  \"\"\"\n",
+        "  if N < n:\n",
+        "    print('n no puede ser mayor que N')\n",
+        "  else:\n",
+        "    multiplos = [x for x in range(0, N) if x % n == 0]\n",
+        "    print(f'La cantidad de múltiplos de {n} menores que {N} es: {len(multiplos)}')\n",
+        "    print(f'Los múltiplos son: {multiplos}')\n",
+        "    return len(multiplos), multiplos"
+      ],
+      "metadata": {
+        "id": "jusqS1T0QA1C"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G5zXzJZmXAPJ"
+      },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero(20,5)\n"
+      ],
+      "metadata": {
+        "id": "cDfwUNHuUJd6",
+        "outputId": "f9658f52-5683-4efc-b951-062b51fbb44f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La cantidad de múltiplos de 5 menores que 20 es: 4\n",
+            "Los múltiplos son: [0, 5, 10, 15]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, [0, 5, 10, 15])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
     },
     {
       "cell_type": "markdown",
