--- a/Clase_06/Estructuras_de_Control_Repetitivas.ipynb
+++ b/Clase_06/Estructuras_de_Control_Repetitivas.ipynb
@@ -118,7 +118,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,16 +211,36 @@
       "cell_type": "code",
       "source": [
         "contraseña = '' # iniciamos con un valor vacio para preguntar la contraseña\n",
-        "\n",
+        "contador = 0\n",
         "while contraseña != 'secreto': #mientras la contraseña sea distinto a secreto, seguir el loop\n",
-        "    contraseña = input('Introduce la contraseña: ') #pide la contraseña al usuario hasta que se de la contraseña correcta\n",
-        "print('¡Contraseña correcta!') #una vez se tenga False en el while, que en realidad es un True para nosotros, da contraseña correcta.\n"
+        "    if contador <= 3:\n",
+        "      contraseña = input('Introduce la contraseña: ') #pide la contraseña al usuario hasta que se de la contraseña correcta\n",
+        "      contador += 1\n",
+        "    else:\n",
+        "      print('cuenta bloqueada') #cuando sea mas de 3 inmediatamente se genera esto\n",
+        "      break #sale del bucle\n",
+        "\n",
+        "if contador <= 3: #en caso el while sea False y sea menos de 3 intentos, se crea esta variable\n",
+        "  print('¡Contraseña correcta!') #una vez se tenga False en el while, que en realidad es un True para nosotros, da contraseña correcta.\n"
       ],
       "metadata": {
-        "id": "3c2nrwndHg55"
+        "id": "3c2nrwndHg55",
+        "outputId": "5bb00ba1-94cd-4e50-b402-b087ef756f6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce la contraseña: secreto\n",
+            "¡Contraseña correcta!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -255,6 +275,85 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "while True:\n",
+        "  response = input('Deseas ejecutar el programa? (escriba si o no): ')\n",
+        "  if response == 'si':\n",
+        "    print('Ejecutando programa')\n",
+        "    #programa\n",
+        "  else:\n",
+        "    print('programa terminado')\n",
+        "    break #termina de no ejecutarse el programa\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "TSTvDQ6Md5KB",
+        "outputId": "32cd85f4-7e20-4218-b1e5-2ea2886e96e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Deseas ejecutar el programa? (escriba si o no): si\n",
+            "Ejecutando programa\n",
+            "Deseas ejecutar el programa? (escriba si o no): si\n",
+            "Ejecutando programa\n",
+            "Deseas ejecutar el programa? (escriba si o no): no\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "while True:\n",
+        "  response = input('Deseas simular la nota final del curso? (escriba si o no): ')\n",
+        "  if response == 'si':\n",
+        "    nota_pc1 = int(input('ingresa la nota de la practica 1: '))\n",
+        "    nota_pc2 = int(input('ingresa la nota de la practica 2: '))\n",
+        "    nota_ef = int(input('ingresa la nota del examen final: '))\n",
+        "    promedio = nota_pc1 * 0.2 + nota_pc2 * 0.2 + nota_ef * 0.6\n",
+        "    print(f'Tu nota final es: {promedio}')\n",
+        "\n",
+        "    #programa\n",
+        "  else:\n",
+        "    print('programa terminado')\n",
+        "    break #termina de no ejecutarse el programa"
+      ],
+      "metadata": {
+        "id": "S1MsZkXiftma",
+        "outputId": "90aa4e1b-7e35-4b54-fc4f-38985e4e0346",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Deseas simular la nota final del curso? (escriba si o no): si\n",
+            "ingresa la nota de la practica 1: 15\n",
+            "ingresa la nota de la practica 2: 14\n",
+            "ingresa la nota del examen final: 18\n",
+            "Tu nota final es: 16.6\n",
+            "Deseas simular la nota final del curso? (escriba si o no): no\n",
+            "programa terminado\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Ejercicios**"
@@ -274,12 +373,103 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 11\n",
+        "while True:\n",
+        "  if contador > 0:\n",
+        "    contador -= 1\n",
+        "    print(contador)\n",
+        "  else:\n",
+        "    print('programa terminado')\n",
+        "    break\n"
+      ],
       "metadata": {
-        "id": "r_V8GaQOI2H3"
+        "id": "r_V8GaQOI2H3",
+        "outputId": "4a19ff6b-6090-45e4-d3e5-2931e664e9fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "0\n",
+            "programa terminado\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "while True:\n",
+        "  response = input('Deseas ejecutar el programa? (escriba si o no): ')\n",
+        "  if response == 'si': #primer while es mientras esto sea verdad\n",
+        "    contador = int(input('Cuantos numeros contar hacia atras? '))+1\n",
+        "    while True:\n",
+        "      if contador > 0: #mientras esto sea verdad si no vuelve al primer while\n",
+        "        contador -= 1\n",
+        "        print(contador)\n",
+        "        time.sleep(2)\n",
+        "      else:\n",
+        "        print('programa terminado')\n",
+        "        break\n",
+        "    #programa\n",
+        "  else:\n",
+        "    print('programa terminado')\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "bu-424EjjVCA",
+        "outputId": "6308cdb5-4086-4274-f44c-a93bfa3a8181",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Deseas ejecutar el programa? (escriba si o no): si\n",
+            "Cuantos numeros contar hacia atras? 15\n",
+            "15\n",
+            "14\n",
+            "13\n",
+            "12\n",
+            "11\n",
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "0\n",
+            "programa terminado\n",
+            "Deseas ejecutar el programa? (escriba si o no): no\n",
+            "programa terminado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -292,12 +482,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Este programa se ejecutara la suma de numeros enteros hasta que se ingreso el numero 0')\n",
+        "suma = 0\n",
+        "while True:\n",
+        "  numero = int(input('Cual es el numero entero que desea ingresar?: '))\n",
+        "  if numero != 0:\n",
+        "    suma += numero\n",
+        "    print(f'La suma hasta el momento es: {suma}')\n",
+        "  else:\n",
+        "    print(f'La suma final es de: {suma}')\n",
+        "    print('Programa terminado')\n",
+        "    break"
+      ],
       "metadata": {
-        "id": "e0BXlSAsJpGW"
+        "id": "e0BXlSAsJpGW",
+        "outputId": "b4dec7d7-5248-4052-d78c-8937c7561dbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Este programa se ejecutara la suma de numeros enteros hasta que se ingreso el numero 0\n",
+            "Cual es el numero entero que desea ingresar?: 10\n",
+            "la suma hasta el momento es: 10\n",
+            "Cual es el numero entero que desea ingresar?: 20\n",
+            "la suma hasta el momento es: 30\n",
+            "Cual es el numero entero que desea ingresar?: 40\n",
+            "la suma hasta el momento es: 70\n",
+            "Cual es el numero entero que desea ingresar?: 10\n",
+            "la suma hasta el momento es: 80\n",
+            "Cual es el numero entero que desea ingresar?: 0\n",
+            "la suma final es de: 80\n",
+            "programa terminado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -310,12 +535,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "print('Juguemos al juego de adivinar el numero')\n",
+        "random = random.randint(1,100)\n",
+        "\n",
+        "while True:\n",
+        "  numero = int(input('Cual crees que es el numero?: '))\n",
+        "  if numero == random:\n",
+        "    print(f'Felicitaciones adivinaste el numero, el numero secreto era: {random}')\n",
+        "    break\n",
+        "  else:\n",
+        "    print('No adivinaste el numero, vuelve a intentar')\n"
+      ],
       "metadata": {
-        "id": "GDOB2-oBJowQ"
+        "id": "GDOB2-oBJowQ",
+        "outputId": "bcbfc525-cb4e-40bc-fd25-55b74b93c34f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Juguemos al juego de adivinar el numero\n",
+            "Cual crees que es el numero?: 2\n",
+            "No adivinaste el numero, vuelve a intentar\n",
+            "Cual crees que es el numero?: 4\n",
+            "No adivinaste el numero, vuelve a intentar\n",
+            "Cual crees que es el numero?: 5\n",
+            "No adivinaste el numero, vuelve a intentar\n",
+            "Cual crees que es el numero?: 2\n",
+            "No adivinaste el numero, vuelve a intentar\n",
+            "Cual crees que es el numero?: 1\n",
+            "No adivinaste el numero, vuelve a intentar\n",
+            "Cual crees que es el numero?: 10\n",
+            "Felicitaciones adivinaste el numero, el numero secreto era: 10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -329,12 +591,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Este programa se ejecutara hasta que se ingrese un numero par')\n",
+        "while True:\n",
+        "  numero_par = int(input('Ingrese un numero par: '))\n",
+        "\n",
+        "  if numero_par % 2 != 0:\n",
+        "    print('No es un numero par')\n",
+        "  else:\n",
+        "    print(f'Si es un numero par: {numero_par}')\n",
+        "    print('Muchas gracias')\n",
+        "    break"
+      ],
       "metadata": {
-        "id": "dmJCXUOQJn__"
+        "id": "dmJCXUOQJn__",
+        "outputId": "f6007291-5256-4347-e6eb-c94bc4092d5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Este programa se ejecutara hasta que se ingrese un numero par\n",
+            "Ingrese un numero par: 14\n",
+            "Si es un numero par: 14\n",
+            "Muchas gracias\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -351,9 +639,45 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "numero = int(input(\"Ingrese un número para calcular su factorial: \"))\n",
+        "\n",
+        "if numero < 0:\n",
+        "    print(\"El factorial no está definido para números negativos.\")\n",
+        "elif numero == 0:\n",
+        "    print(\"El factorial de 0 es 1.\")\n",
+        "else:\n",
+        "    factorial = 1\n",
+        "    contador = 1\n",
+        "    while contador <= numero:\n",
+        "        factorial *= contador\n",
+        "        contador += 1\n",
+        "    print(f\"El factorial de {numero} es {factorial}\")"
+      ],
+      "metadata": {
+        "id": "Ss5egYmdJnn0",
+        "outputId": "75606037-6ba1-4b6d-8980-fd37ae5f9827",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número para calcular su factorial: 4\n",
+            "El factorial de 4 es 24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ss5egYmdJnn0"
+        "id": "SkWn5N85n065"
       },
       "execution_count": null,
       "outputs": []
@@ -381,7 +705,7 @@
     {
       "cell_type": "code",
       "source": [
-        "for elemento in secuencia:\n",
+        "for elemento in secuencia: #secuencia es basicamente el rango o itera de estos valores\n",
         "    # Bloque de código a ejecutar por cada elemento\n"
       ],
       "metadata": {
@@ -389,6 +713,34 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in [1,2,3,4,5]: #recorre todo esos valores y devuelveme la iteraciones, osea uno por uno\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "omTGaizioB0r",
+        "outputId": "22e063b7-ea21-4efe-a34f-bbb07e315fa0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
