--- a/Clase_06/Estructuras_de_Control_Repetitivas.ipynb
+++ b/Clase_06/Estructuras_de_Control_Repetitivas.ipynb
@@ -37,6 +37,132 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Repaso Examen 2"
+      ],
+      "metadata": {
+        "id": "D26Gy8sqJ_hN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(2,5+1): #siempre en range +1\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "R1hKh9XWKm1W",
+        "outputId": "a67d5129-4e67-4999-c98e-8556a2ca0269",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcular_factorial(numero):\n",
+        "  \"\"\" Esta funcion calcula el factorial de un numero\"\"\"\n",
+        "\n",
+        "  if numero < 0:\n",
+        "    print('El valor no puede ser negativo')\n",
+        "  elif type(numero) == float:\n",
+        "    print('El valor no puede ser un numero decimal')\n",
+        "  else:\n",
+        "    result = 1\n",
+        "    for i in range(2,numero+1):\n",
+        "      result = result*i\n",
+        "    return result\n",
+        "\n",
+        "calcular_factorial(3)"
+      ],
+      "metadata": {
+        "id": "43LOuxA3J_Ts",
+        "outputId": "389d1544-c2d5-4c93-ffb6-295e55b970ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def es_primo(numero):\n",
+        "  for i in range(2, numero): #por eso es entre toda esa lista de numero, no solo uno\n",
+        "    if numero %i == 0: #basicamente si es divisible, por ende no es primo\n",
+        "      return False\n",
+        "  return True #si no es divisible entre 2 u otro numero, retorna verdadero, pero tiene que salir del loop, porque si sale ya ese numero se vuelve true sin iterar en otros\n",
+        "\n",
+        "#es_primo(4)\n",
+        "\n",
+        "list = []\n",
+        "def generar_primos(numero):\n",
+        "  for i in range(1, numero+1):\n",
+        "    if es_primo(i):\n",
+        "      list.append(i)\n",
+        "      print(f'{i} es primo!')\n",
+        "\n",
+        "generar_primos(29)\n",
+        "print(list)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "INQsAykLLuyC",
+        "outputId": "bd678d90-9045-47bf-90fc-5e97341994e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 es primo!\n",
+            "2 es primo!\n",
+            "3 es primo!\n",
+            "5 es primo!\n",
+            "7 es primo!\n",
+            "11 es primo!\n",
+            "13 es primo!\n",
+            "17 es primo!\n",
+            "19 es primo!\n",
+            "23 es primo!\n",
+            "29 es primo!\n",
+            "[1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Estructuras de Control Repetitivas**"
       ],
       "metadata": {
@@ -230,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -336,7 +462,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +516,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +566,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +736,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +787,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,6 +867,49 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "my_list = [1,2,3,4,5,6,7,8]\n",
+        "\n",
+        "np.sum(my_list)"
+      ],
+      "metadata": {
+        "id": "jt9N5hUHtyuR",
+        "outputId": "212742bd-a9fd-4ae3-b02b-a97b72b66928",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "\n",
+        "suma_total = reduce(lambda x,y: x+y, lambda )"
+      ],
+      "metadata": {
+        "id": "3zjjtNU_t8Lu"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
